Prevent horizontal overflow

--- a/src/sass/modules/_settings-dialog.scss
+++ b/src/sass/modules/_settings-dialog.scss
@@ -32,6 +32,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   overflow-y: auto;
+  overflow-x: hidden;
   padding: 20px;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
 }
